WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77987
Web Inspector: Touch event emulation fails for iframes
https://bugs.webkit.org/show_bug.cgi?id=77987
Summary
Web Inspector: Touch event emulation fails for iframes
Alexander Pavlov (apavlov)
Reported
2012-02-07 07:56:36 PST
Patch to follow.
Attachments
Patch
(5.19 KB, patch)
2012-02-07 08:52 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-02-07 07:59:43 PST
"touchend" is not dispatched when the mouse button is released
Alexander Pavlov (apavlov)
Comment 2
2012-02-07 08:52:17 PST
Created
attachment 125849
[details]
Patch
WebKit Review Bot
Comment 3
2012-02-08 03:13:21 PST
Comment on
attachment 125849
[details]
Patch Clearing flags on attachment: 125849 Committed
r107062
: <
http://trac.webkit.org/changeset/107062
>
WebKit Review Bot
Comment 4
2012-02-08 03:13:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug