Web Inspector: Touch event emulation fails for iframes https://bugs.webkit.org/show_bug.cgi?id=77987

Reviewed by Pavel Feldman.

Source/WebCore:

Test: fast/events/touch/emulated-touch-iframe.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMouseReleaseEvent):

LayoutTests:

* fast/events/touch/emulated-touch-iframe-expected.txt: Added.
* fast/events/touch/emulated-touch-iframe.html: Added.
* fast/events/touch/resources/emulated-touch-iframe2.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@107062 bbb929c8-8fbe-4397-9dbb-9b2b20218538